refactor: vo도입