@@ -4,12 +4,13 @@ import static camp.nextstep.edu.missionutils.test.Assertions.assertSimpleTest;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import calculator.controller.ScenarioRunner;
+import calculator.controller.CalculateApplication;
 import calculator.controller.CalculateIntegerList;
-import calculator.controller.FindCustomChar;
-import calculator.controller.ParsingInputString;
+import calculator.controller.CustomCharStrategy;
 import calculator.model.InputString;
 import camp.nextstep.edu.missionutils.test.NsTest;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -36,60 +37,41 @@ class ApplicationTest extends NsTest {
     @DisplayName("커스텀 문자 파싱을 확인한다.")
     void parsingInputTest() {
         //given
-        InputString inputString = new InputString("12,3:4&6");
-        inputString.setCustomChar('&');
+        InputString inputString = new InputString("//&\\n12,3:46", "[,:]", new ArrayList<>());
 
         //when
-        ParsingInputString parsingInputString = new ParsingInputString();
-        List<String> numberStringList = parsingInputString.parsingInput(inputString);
-        List<Integer> numberList = parsingInputString.getNumberList(inputString, numberStringList);
+        InputString afterInputString = CustomCharStrategy.findCustomChar(inputString);
 
         //then
-        assertThat(numberList).isEqualTo(List.of(12, 3, 4, 6));
-        assertThat(inputString.getNumberList()).isEqualTo(List.of(12, 3, 4, 6));
+        assertThat(afterInputString.splitString()).isEqualTo("[,:&]");
     }
 
     @Test
     @DisplayName("계산 메서드의 동작을 확인한다.")
     void calculateTest() {
         //given
-        InputString inputString = new InputString("1,2,3:4");
-        inputString.setNumberList(List.of(1, 2, 3, 4));
+        List<String> numberList = new ArrayList<>(Arrays.asList("1", "2", "3", "4"));
+        InputString inputString = new InputString("1,2,3:4", "[,:]", numberList);
 
         //when
-        CalculateIntegerList calculateIntegerList = new CalculateIntegerList();
-        int calculateResult = calculateIntegerList.calculateResult(inputString);
+        int calculateResult = CalculateIntegerList.calculateResult(inputString);
 
         //then
         assertThat(calculateResult).isEqualTo(10);
     }
 
     @Test
-    @DisplayName("커스텀 구분자 파싱 메서드를 확인한다.")
-    void findCustomTest() {
-        //given
-        InputString inputString = new InputString("//;\\n1,2,3:4;9");
-
-        //when
-        FindCustomChar findCustomChar = new FindCustomChar();
-        findCustomChar.setCustomChar(inputString);
-
-        //then
-        assertThat(inputString.getCustomChar()).isEqualTo(';');
-    }
-
-    @Test
     @DisplayName("특정 케이스를 확인한다.")
     void edgeCaseTest() {
         //given
-        InputString inputString1 = new InputString("//\\n");
-        InputString inputString2 = new InputString("");
-        InputString inputString3 = new InputString("//;\\n");
+        InputString inputString1 = new InputString("//\\n","[,:]", new ArrayList<>());
+        InputString inputString2 = new InputString("","[,:]", new ArrayList<>());
+        InputString inputString3 = new InputString("//;\\n","[,:]", new ArrayList<>());
 
         //when
-        int calculate1 = ScenarioRunner.runScenario(inputString1);
-        int calculate2 = ScenarioRunner.runScenario(inputString2);
-        int calculate3 = ScenarioRunner.runScenario(inputString3);
+        int calculate1 = CalculateApplication.run(inputString1);
+        int calculate2 = CalculateApplication.run(inputString2);
+        int calculate3 = CalculateApplication.run(inputString3);
 
         //then
         assertThat(calculate1).isEqualTo(0);
